--- a/Games.html
+++ b/Games.html
@@ -41,11 +41,11 @@
             <h2 class="animate___animated animate_fedin animate_infinite">Τα έργα μου</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="WebGener/img/Sreenshot.png" alt="Vintage Secret" class="card-img">
+                    <img src="portofolio/img/Sreenshot.png" alt="Vintage Secret" class="card-img">
                     <div class="card-content">
-                        <h3>Website For Vintage Secret</h3>
-                        <p>Ένα υπέροχo website για την Vintage Secret Fashion με επιλογές στην μόδα και μοναδικά κομμάτια</p>
-                        <a href="WebGener/index.html" class="card-btn">Δοκίμασέ το</a>
+                        <h3>Portofolio Ui/Ux</h3>
+                        <p>Προσωπικό portofolio για έργα και επικοινωνία με συναργάτες</p>
+                        <a href="portofolio/index.html" class="card-btn">Δοκίμασέ το</a>
                     </div>
                 </div>
                 <div class="card">
@@ -104,4 +104,5 @@
 </footer>
 </body>
 <script src="index.js"></script>
+
 </html>
