--- a/Games.html
+++ b/Games.html
@@ -41,7 +41,7 @@
             <h2 class="animate___animated animate_fedin animate_infinite">Τα έργα μου</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="portofolio/img/Sreenshot.png" alt="Vintage Secret" class="card-img">
+                    <img src="portofolio/img/Sreenshot.jpg" alt="Vintage Secret" class="card-img">
                     <div class="card-content">
                         <h3>Portofolio Ui/Ux</h3>
                         <p>Προσωπικό portofolio για έργα και επικοινωνία με συναργάτες</p>
@@ -106,3 +106,4 @@
 <script src="index.js"></script>
 
 </html>
+
