--- a/Games.html
+++ b/Games.html
@@ -41,7 +41,7 @@
             <h2 class="animate___animated animate_fedin animate_infinite">Τα έργα μου</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="portofolio/img/Sreenshot.jpg" alt="Vintage Secret" class="card-img">
+                    <img src="portofolio/img/screen.jpg.png" alt="portofolio" class="card-img">
                     <div class="card-content">
                         <h3>Portofolio Ui/Ux</h3>
                         <p>Προσωπικό portofolio για έργα και επικοινωνία με συναργάτες</p>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="application/img/screenshot.png" alt="Memory Game" class="card-img"/>
+                    <img src="application/img/screen.jpg.png" alt="Memory Game" class="card-img"/>
                     <div class="card-content">
                         <h3>Memory Game</h3>
                         <p>Βελτίωσε τη μνήμη σου με αυτό το διασκεδαστικό παιχνίδι.</p>
@@ -106,4 +106,5 @@
 <script src="index.js"></script>
 
 </html>
+
 
