--- a/Games.html
+++ b/Games.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
     <link rel="stylesheet" href="index.css">
       <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
-    <title>New page for my Games|FD</title>
+    <title>New page for my Games-Portofolio|FD</title>
 </head>
 <body>
   <header>
@@ -49,11 +49,11 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="application/img/screen.jpg.png" alt="Memory Game" class="card-img"/>
+                    <img src="Portofolio-js/img/image.png" alt="Portofolio Website" class="card-img"/>
                     <div class="card-content">
-                        <h3>Memory Game</h3>
-                        <p>Βελτίωσε τη μνήμη σου με αυτό το διασκεδαστικό παιχνίδι.</p>
-                        <a href="application/index.html" class="card-btn">Δοκίμασέ το</a>
+                        <h3>Website Javascript</h3>
+                        <p>Ένα website για να μάθεις καλύτερα την javascript και την εγκατασταση της </p>
+                        <a href="Portofolio-js/index.html" class="card-btn">Δοκίμασέ το</a>
                     </div>
                 </div>
                 <div class="card">
@@ -106,5 +106,6 @@
 <script src="index.js"></script>
 
 </html>
+
 
 
