--- a/index.html
+++ b/index.html
@@ -10,140 +10,195 @@
       <meta name="description" content="Frontend Developer Portfolio showcasing skills in HTML, CSS, JavaScript, and UI/UX design. Explore projects and contact for collaboration.">
     <meta name="keywords" content="Frontend Developer, Web Development, HTML, CSS,JavaScript, UI/UX Design, Portfolio, Projects, Contact">
     <meta name="author" content="Frontend Developer">
-  <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="img/MyLogo.jpg" type="image/x-icon">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Καλώς ήλθατε στον ιστότοπο μου</title>
 </head>
-<body>
-  <header>
-     <div class="logo">
-         <img src="MyLogo.jpg" alt="logo-web" height="50">
-         <h1>FrontDev</h1>
-     </div>
-  <div class="menu-toggle" id="menu-toggle">
-    <span></span><span></span><span></span>
-  </div>
-  <nav id="nav-menu">
-    <a href="#projects">Έργα</a>
-    <a href="Games.html">Παιχνίδια</a>
-    <a href="#pricing">Τιμοκατάλογος</a>
-    <a href="#contact">Επικοινωνία</a>
-     <a href="my_history.html">Το πώς ξεκίνησα</a>
-    <a href="https://www.youtube.com/@WebDeveloper-op1fb"><i class="ri-youtube-line"></i></a>
-     <a href="https://github.com/Panagiwthsbarruku"><i class="ri-github-fill"></i></a>
-  </nav>
+<body class="bg-gray-900">
+<header class="bg-gray-900 text-white p-4 flex justify-between items-center shadow-md">
+    <div class="flex items-center">
+        <img src="img/MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
+        <h1 class="text-2xl font-bold">FrontDev</h1>
+    </div>
+    <nav id="desktop-nav" class="hidden md:flex items-center space-x-6 font-bold">
+        <a href="Games.html" class="hover:text-blue-400 transition duration-300">Έργα-παιχνιδια</a>
+        <a href="#pricing" class="hover:text-blue-400 transition duration-300">Τιμοκατάλογος</a>
+        <a href="#contact" class="hover:text-blue-400 transition duration-300">Επικοινωνία</a>
+        <a href="my_history.html" class="hover:text-blue-400 transition duration-300">Το πώς ξεκίνησα</a>
+        <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300"><i class="ri-youtube-line"></i></a>
+        <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300"><i class="ri-github-fill"></i></a>
+    </nav>
+    <div class="md:hidden" id="menu-toggle">
+        <button class="text-white focus:outline-none">
+            <svg id="menu-icon" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+            <svg id="close-icon" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+        </button>
+    </div>
 </header>
-<section class="hero">
-  <div class="hero-text">
-    <h2>Προγραμματιστής Ιστών και σχεδιαστής εφαρμογών</h2>
-<span class="inline-flex items-center bg-white bg-opacity-20 text-white text-sm font-bold px-4 py-2 rounded-full mb-6 gap-2">
-<i class="fas fa-code"></i> Μάθετε <span id="dynamic-text-learn" class="typing-text-learn"></span><span class="blinking-cursor-learn">|</span>
-</span>
-    <a  href="#Form" type="button" style="display:block; margin: 5% auto;">Ξεκίνα Σήμερα</a>
-     <div class="social-icons">
-      <a href="https://www.youtube.com/@WebDeveloper-op1fb"><i class="ri-youtube-line"></i></a>
-     <a href="https://www.youtube.com/@WebDeveloper-op1fb"><i class="ri-github-fill"></i></a>
-    </div>
-  </div>
-  <div class="hero-img">
-    <img src="MyLogo.jpg" width="200"/>
-  </div>
-</section>
-<section id="projects"> 
-  <h2>Τα Έργα</h2>
-  <div class="projects">
-    <div class="card">
-      <h3>Σύγχρονη Ιστοσελίδα E-commerce </h3>
-      <p> Ένα ισχυρό ηλεκτρονικό κατάστημα με ενσωμάτωση πληρωμών και φιλόξενο για τον χρήστη σχεδιασμό.</p>
-    </div>
-    <div class="card">
-      <h3>Εταιρικό Portfolio </h3>
-      <p>Κομψές portfolio ιστοσελίδες για επαγγελματίες και επιχειρήσεις.</p>
-    </div>
-    <div class="card">
-      <h3>Εργαλεία Ενσωμάτωσης Δεδομένων </h3>
-      <p>Εξατομικευμένα ταμπλό και λύσεις ενσωμάτωσης για επιχειρήσεις.</p>
-    </div>
-  </div>
-</section>
-<div class="tags-list">
-   <div class="inner">
-  <diV class="tag"><span></span>HTML5</diV>
-  <diV class="tag"><span></span>CSS</diV>
-  <diV class="tag"><span></span> SCRIPT JS</diV>
-  <diV class="tag"><span></span> JAVA</diV>
-  <diV class="tag"><span></span>PHP</diV>
-  <diV class="tag"><span></span>python</diV>
-  <diV class="tag"><span></span>CSS</diV>
-  <diV class="tag"><span></span> Node JS</diV>
-  <diV class="tag"><span></span> My Sql</diV>
-  <diV class="tag"><span></span>PHP</diV>
+<nav id="nav-menu" class="hidden md:hidden flex-col items-center bg-gray-900 text-white w-full flex flex-col font-bold">
+    <a href="Games.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2 ">Έργα-παιχνιδια</a>
+    <a href="#pricing" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Τιμοκατάλογος</a>
+    <a href="#contact" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Επικοινωνία</a>
+    <a href="my_history.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Το πώς ξεκίνησα</a>
+    <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300 w-full text-center py-2"><i class="ri-youtube-line"></i></a>
+    <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300 w-full text-center py-2"><i class="ri-github-fill"></i></a>
+</nav>
+  <section class="hero bg-gray-800 text-white py-20">
+    <div class="container mx-auto flex flex-col md:flex-row items-center px-6">
+      <div class="hero-text md:w-1/2 text-center md:text-left">
+        <h2 class="text-4xl md:text-5xl font-extrabold leading-tight mb-4">Προγραμματιστής Ιστών και σχεδιαστής εφαρμογών</h2>
+        <span class="inline-flex items-center bg-white bg-opacity-20 text-white text-sm font-bold px-4 py-2 rounded-full mb-6 gap-2">
+          <i class="fas fa-code"></i> Μάθετε <span id="dynamic-text-learn" class="typing-text-learn"></span><span class="blinking-cursor-learn">|</span>
+        </span>
+        <div class="flex flex-col items-center mt-6">
+    <a href="#Form" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-10 rounded-full transition duration-300 text-center w-1/2 sm:w-auto">
+    Ξεκίνα Σήμερα
+  </a>
      </div>
-    <div class="fade"></div>
-</div>
-<section id="tech">
-  <h2>Γλώσσες Προγραμματισμού & Τεχνολογίες</h2>
-  <div class="tech">
-    <div class="card" style="background: red; color: aliceblue;">HTML5</div>
-    <div class="card"  style="background: blue; color: aliceblue;">CSS3</div>
-    <div class="card"  style="background: rgba(199, 199, 22, 0.856); color: aliceblue;">JavaScript</div>
-    <div class="card"  style="background: rgba(199, 199, 22, 0.856); color: aliceblue;">Node.js</div>
-    <div class="card"  style="background: rebeccapurple; color: aliceblue;">PHP</div>
-    <div class="card"  style="background: linear-gradient(65deg,#0008e9ea,#fbff00); color: aliceblue;">Python</div>
-    <div class="card"  style="background: red; color: aliceblue;">MySQL</div>
+        <div class="social-icons mt-8 flex justify-center md:justify-start space-x-4">
+          <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-3xl hover:text-red-600 transition duration-300"><i class="ri-youtube-line"></i></a>
+          <a href="https://github.com/Panagiwthsbarruku" class="text-3xl hover:text-gray-400 transition duration-300"><i class="ri-github-fill"></i></a>
+        </div>
+      </div>
+      <div class="hero-img md:w-1/2 mt-10 md:mt-0 flex justify-center">
+        <img src="img/MyLogo.jpg" class="w-64 h-64 rounded-full shadow-2xl"/>
+      </div>
+    </div>
+  </section>
+  <section id="projects" class="py-20 bg-gray-100">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Τα Έργα</h2>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-white rounded-lg shadow-lg p-6 text-center transform hover:scale-105 transition duration-300">
+          <h3 class="text-xl font-bold mb-2">Σύγχρονη Ιστοσελίδα E-commerce</h3>
+          <p class="text-gray-600">Ένα ισχυρό ηλεκτρονικό κατάστημα με ενσωμάτωση πληρωμών και φιλόξενο για τον χρήστη σχεδιασμό.</p>
+        </div>
+        <div class="bg-white rounded-lg shadow-lg p-6 text-center transform hover:scale-105 transition duration-300">
+          <h3 class="text-xl font-bold mb-2">Εταιρικό Portfolio</h3>
+          <p class="text-gray-600">Κομψές portfolio ιστοσελίδες για επαγγελματίες και επιχειρήσεις.</p>
+        </div>
+        <div class="bg-white rounded-lg shadow-lg p-6 text-center transform hover:scale-105 transition duration-300">
+          <h3 class="text-xl font-bold mb-2">Εργαλεία Ενσωμάτωσης Δεδομένων</h3>
+          <p class="text-gray-600">Εξατομικευμένα ταμπλό και λύσεις ενσωμάτωσης για επιχειρήσεις.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="bg-gray-900 py-4 overflow-hidden relative">
+    <div class="flex whitespace-nowrap animate-scroll">
+      <div class="flex space-x-4 px-4">
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">HTML5</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">CSS</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JS SCRIPT</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JAVA</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">PHP</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Python</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Node JS</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">My SQL</span>
+      </div>
+      <div class="flex space-x-4 px-4" aria-hidden="true">
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">HTML5</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">CSS</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JS SCRIPT</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JAVA</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">PHP</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Python</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Node JS</span>
+        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">My SQL</span>
+      </div>
+    </div>
   </div>
-</section>
-<section id="pricing" class="pricing">
-  <h2>Πακέτα τιμών</h2>
-  <div class="pricing-cards">
-    <div class="card-basic">
-      <h3>Basic Package</h3>
-      <p class="price">€300</p>
-      <p>✔ 3 Pages Website</p>
-      <p>✔ Responsive Design</p>
-      <p>✔ Contact Form</p>
-      <button type="button" onclick="selectPackage('Basic')">Choose Plan</button>
+
+  <section id="tech" class="py-20">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-gray-400 mb-12">Γλώσσες Προγραμματισμού & Τεχνολογίες</h2>
+      <div class="flex flex-wrap justify-center gap-4 text-center">
+        <div class="bg-red-500 text-white font-bold py-2 px-5 rounded-lg shadow-md">HTML5</div>
+        <div class="bg-blue-500 text-white font-bold py-2 px-5 rounded-lg shadow-md">CSS3</div>
+        <div class="bg-yellow-400 text-black font-bold py-2 px-5 rounded-lg shadow-md">JavaScript</div>
+        <div class="bg-green-500 text-white font-bold py-2 px-5 rounded-lg shadow-md">Node.js</div>
+        <div class="bg-purple-600 text-white font-bold py-2 px-5 rounded-lg shadow-md">PHP</div>
+        <div class="bg-gradient-to-r from-blue-500 to-yellow-400 text-white font-bold py-2 px-5 rounded-lg shadow-md">Python</div>
+        <div class="bg-orange-500 text-white font-bold py-2 px-5 rounded-lg shadow-md">MySQL</div>
+      </div>
     </div>
-    <div class="card-standard">
-      <h3>Standard Package</h3>
-      <p class="price-1">€600</p>
-      <p>✔ 7 Pages Website</p>
-      <p>✔ Responsive Design</p>
-      <p>✔ Contact Form + CMS</p>
-      <button type="button" onclick="selectPackage('Standard')">Choose Plan</button>
+  </section>
+
+  <section id="pricing" class="pricing py-20 bg-gray-100">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Πακέτα τιμών</h2>
+      <div class="grid md:grid-cols-3 gap-8 text-center">
+        <div class="bg-white rounded-lg shadow-lg p-8 border-t-4 border-green-500">
+          <h3 class="text-2xl font-bold mb-4">Basic Package</h3>
+          <p class="text-4xl font-extrabold text-gray-800 mb-4">€300</p>
+          <ul class="space-y-2 text-gray-600 mb-8">
+            <li>✔ 3 Pages Website</li>
+            <li>✔ Responsive Design</li>
+            <li>✔ Contact Form</li>
+          </ul>
+          <button type="button" onclick="selectPackage('Basic')" class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-full transition duration-300">Choose Plan</button>
+        </div>
+        <div class="bg-white rounded-lg shadow-xl p-8 border-t-4 border-yellow-500 transform scale-105">
+          <h3 class="text-2xl font-bold mb-4">Standard Package</h3>
+          <p class="text-4xl font-extrabold text-gray-800 mb-4">€600</p>
+          <ul class="space-y-2 text-gray-600 mb-8">
+            <li>✔ 7 Pages Website</li>
+            <li>✔ Responsive Design</li>
+            <li>✔ Contact Form + CMS</li>
+          </ul>
+          <button type="button" onclick="selectPackage('Standard')" class="w-full bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded-full transition duration-300">Choose Plan</button>
+        </div>
+        <div class="bg-white rounded-lg shadow-lg p-8 border-t-4 border-red-500">
+          <h3 class="text-2xl font-bold mb-4">Premium Package</h3>
+          <p class="text-4xl font-extrabold text-gray-800 mb-4">€1000</p>
+          <ul class="space-y-2 text-gray-600 mb-8">
+            <li>✔ Unlimited Pages</li>
+            <li>✔ Responsive Design</li>
+            <li>✔ CMS + Custom Features</li>
+          </ul>
+          <button type="button" onclick="selectPackage('Premium')" class="w-full bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full transition duration-300">Choose Plan</button>
+        </div>
+      </div>
     </div>
-    <div class="card-premium">
-      <h3>Premium Package</h3>
-      <p class="price-2">€1000</p>
-      <p>✔ Unlimited Pages</p>
-      <p>✔ Responsive Design</p>
-      <p>✔ CMS + Custom Features</p>
-      <button type="button" onclick="selectPackage('Premium')">Choose Plan</button>
+  </section>
+  <section id="contact" class="py-20">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-gray-400 mb-8">Επικοινώνησε Μαζί μου</h2>
+      <form action="https://formspree.io/f/mldlrpgv" method="POST" id="Form" class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
+        <div class="mb-4">
+          <label for="name" class="block text-gray-700 font-bold mb-2">Όνομα</label>
+          <input type="text" id="name" required class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="email" class="block text-gray-700 font-bold mb-2">Gmail</label>
+          <input type="email" id="email" required class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div class="mb-4">
+          <label for="message" class="block text-gray-700 font-bold mb-2">Μήνυμα</label>
+          <textarea id="message" rows="5" required placeholder="Επίλεξε ένα απο τα παρακάτω πακέτα κατά την υποβολή του μήνυματος" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+        </div>
+        <div class="mb-6 flex justify-center space-x-2">
+          <button type="button" onclick="selectPackage('Basic')" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-full transition duration-300">Basic</button>
+          <button type="button" onclick="selectPackage('Standard')" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded-full transition duration-300">Standard</button>
+          <button type="button" onclick="selectPackage('Premium')" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full transition duration-300">Premium</button>
+        </div>
+        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg transition duration-300">Send Message</button>
+      </form>
     </div>
-  </div>
-</section>
-<section id="contact">
-  <h2 style=" color: rgb(0, 0, 0);
-  font-weight: 800; text-align: center; margin: 2%;">Επικοινώνησε Μαζί μου</h2>
-  <form action="https://formspree.io/f/mldlrpgv" method="POST" id="Form">
-    <label for="name">Όνομα</label>
-    <input type="text" id="name" required>
-    <label for="email">Gmail</label>
-    <input type="email" id="email" required>
-    <label for="message">Μήνυμα</label>
-    <textarea id="message" rows="5" required placeholder="Επίλεξε ένα απο τα παρακάτω πακέτα κατά την υποβολή του μήνυματος"></textarea>
-     <div class="price-package">
-  <button type="button" style="background-color: green;" onclick="selectPackage('Basic')">Basic</button>
-  <button type="button" style="background-color: goldenrod;" onclick="selectPackage('Standard')">Standard</button>
-  <button type="button" style="background-color: red;" onclick="selectPackage('Premium')">Premium</button>
-</div>
-    <button type="submit">Send Message</button>
-  </form>
-</section>
-<footer>
-  <p class="text-gray-400">© 2025 FrontDev. Όλα τα δικαιώματα διατηρούνται</p>
-  <p>Creator by FrontDev</p>
-</footer>
+  </section>
+  <footer class="bg-gray-900 text-white text-center py-6">
+    <p class="text-gray-400">© 2025 FrontDev. Όλα τα δικαιώματα διατηρούνται</p>
+    <p class="">Creator by FrontDev</p>
+    <div class="text-center gap-2 m-2 ">
+   <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300"><i class="ri-youtube-line"></i></a>
+   <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300"><i class="ri-github-fill"></i></a>
+   </div>
+  </footer>
 </body>
 <script src="index.js" defer></script>
 </html>
