--- a/Games.html
+++ b/Games.html
@@ -3,109 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-    <link rel="stylesheet" href="index.css">
-      <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
-    <title>New page for my Games-Portofolio|FD</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
+    <link rel="icon" href="img/MyLogo.jpg" type="image/x-icon">
+    <title>Έργα-παιχνιδια|FD</title>
 </head>
-<body>
-  <header>
- <div class="logo">
-         <img src="MyLogo.jpg" alt="logo-web" height="50">
-         <h1>FrontDev</h1>
-     </div>
-  <div class="menu-toggle" id="menu-toggle">
-    <span></span><span></span><span></span>
-  </div>
-  <nav id="nav-menu">
-    <a href="index.html">Αρχική</a>
-    <a href="index.html">Τιμοκατάλογος</a>
-    <a href="index.html">Επικοινωνία</a>
-       <a href="my_history.html">Το πώς ξεκίνησα</a>
-     <a href="https://www.youtube.com/@WebDeveloper-op1fb"><i class="ri-youtube-line"></i></a>
-     <a href="https://github.com/Panagiwthsbarruku"><i class="ri-github-fill"></i></a>
-  </nav>
+<body class="bg-gray-900">
+   <header class="bg-gray-900 text-white p-4 flex justify-between items-center shadow-md">
+    <div class="flex items-center">
+        <img src="img/MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
+        <h1 class="text-2xl font-bold">FrontDev</h1>
+    </div>
+    <nav id="desktop-nav" class="hidden md:flex items-center space-x-6 font-bold">
+        <a href="index.html" class="hover:text-blue-400 transition duration-300">Αρχική</a>
+        <a href="index.html" class="hover:text-blue-400 transition duration-300">Τιμοκατάλογος</a>
+        <a href="index.html" class="hover:text-blue-400 transition duration-300">Επικοινωνία</a>
+        <a href="my_history.html" class="hover:text-blue-400 transition duration-300">Το πώς ξεκίνησα</a>
+        <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300"><i class="ri-youtube-line"></i></a>
+        <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300"><i class="ri-github-fill"></i></a>
+    </nav>
+    <div class="md:hidden" id="menu-toggle">
+        <button class="text-white focus:outline-none">
+            <svg id="menu-icon" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+            <svg id="close-icon" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+        </button>
+    </div>
 </header>
-<div class="logo"> 
-    <i class="ri-playstation-line"></i>
-    <i class="ri-gamepad-line"></i>
-    <i class="ri-game-line"></i>
-    <i class="ri-chess-line"></i>
-    <img src="MyLogo.jpg" alt="logo" width="200" style="display: block; margin: 5% auto; box-shadow: 0px 10px 10px black;">
-</div>
-    <main class="projects-container">
-        <section class="projects">
-            <h2 class="animate___animated animate_fedin animate_infinite">Τα έργα μου</h2>
-            <div class="cards">
-                <div class="card">
-                    <img src="portofolio/img/screen.jpg.png" alt="portofolio" class="card-img">
-                    <div class="card-content">
-                        <h3>Portofolio Ui/Ux</h3>
-                        <p>Προσωπικό portofolio για έργα και επικοινωνία με συναργάτες</p>
-                        <a href="portofolio/index.html" class="card-btn">Δοκίμασέ το</a>
+<nav id="nav-menu" class="hidden md:hidden flex-col items-center bg-gray-900 text-white w-full flex flex-col">
+    <a href="index.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Αρχική</a>
+    <a href="index.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Τιμοκατάλογος</a>
+    <a href="index.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Επικοινωνία</a>
+    <a href="my_history.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Το πώς ξεκίνησα</a>
+    <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300 w-full text-center py-2"><i class="ri-youtube-line"></i></a>
+    <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300 w-full text-center py-2"><i class="ri-github-fill"></i></a>
+</nav>
+    <div class="relative flex justify-center my-8">
+        <img src="img/MyLogo.jpg" alt="logo" class="w-48 rounded-full shadow-lg">
+    </div>
+    <main class="projects-container px-4 py-12 bg-gray-50">
+        <section class="projects max-w-6xl mx-auto">
+            <h2 class="text-3xl font-bold text-center mb-10 animate-pulse">Τα έργα μου</h2>
+            <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+                <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col ">
+                    <img src="WebGener/img/Sreenshot.png" alt="WebSIte React" class="h-48 w-full object-cover">
+                    <div class="p-4 flex flex-col flex-grow">
+                        <h3 class="text-lg font-semibold text-blue-700 mb-2">Προσωπική σελίδα Προγραμματισμού</h3>
+                        <p class="text-gray-600 mb-4 flex-grow">Μια σελίδα που αφορά κυριώς προγραμματιστές γλώσσας React</p>
+                         <div class="flex gap-4 m-2 p-3">
+                          <span class="bg-gray-100 p-3 text-red-500 font-bold rounded-md shadow-lg cursor-pointer">HTML</span>
+                          <span class="bg-gray-100 p-3 text-blue-400 font-bold rounded-md shadow-lg cursor-pointer">tailwindcss</span>
+                          <span class="bg-gray-100 p-3 text-yellow-500 font-bold rounded-md shadow-lg cursor-pointer">JavaScript</span>
+                        </div>
+                        <a href="application/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="Portofolio-js/img/image.png" alt="Portofolio Website" class="card-img"/>
-                    <div class="card-content">
-                        <h3>Website Javascript</h3>
-                        <p>Ένα website για να μάθεις καλύτερα την javascript και την εγκατασταση της </p>
-                        <a href="Portofolio-js/index.html" class="card-btn">Δοκίμασέ το</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="new-debt-manager-app/Στιγμιότυπο οθόνης 2025-07-14 083613.png" alt="Quiz Game" class="card-img" >
-                    <div class="card-content">
-                        <h3>Mobile App Design</h3>
-                        <p>Σχεδιασμός UI/UX για μια mobile εφαρμογή διαχείρισης εργασιών, με έμφαση στην απλότητα και την χρηστικότητα.</p>
-                        <a href="new-debt-manager-app/index.html" class="card-btn">Δοκίμασέ το</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="Women's-Support-73/Στιγμιότυπο οθόνης 2025-07-14 102734.png" alt="website wommen" class="card-img" >
-                    <div class="card-content">
-                        <h3>Mobile App Design</h3>
-                        <p>Σχεδιασμός UI/UX για μια mobile εφαρμογή διαχείρισης εργασιών, με έμφαση στην απλότητα και την χρηστικότητα.</p>
-                        <a href="Women's-Support-73/index.html" class="card-btn">Δοκίμασέ το</a>
-                    </div>
-                </div>
-                 <div class="card">
-                    <img src="Day1/Στιγμιότυπο οθόνης 2025-07-21 092946.png" alt="Logistics Center Website" class="card-img" >
-                    <div class="card-content">
-                        <h3>Logistics Cender Website</h3>
-                        <p>Σχεδιασμός UI/UX για μια mobile εφαρμογή διαχείρισης εργασιών, με έμφαση στην απλότητα και την χρηστικότητα.</p>
-                        <a href="Day1/index.html" class="card-btn">Δοκίμασέ το</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="Day2/img/Στιγμιότυπο οθόνης 2025-07-23 095531.png" alt="Logistics Center Website" class="card-img" >
-                    <div class="card-content">
-                        <h3>Logistics Cender Website</h3>
-                        <p>Σχεδιασμός UI/UX για μια mobile εφαρμογή διαχείρισης εργασιών, με έμφαση στην απλότητα και την χρηστικότητα.</p>
-                        <a href="Day2/index.html" class="card-btn">Δοκίμασέ το</a>
-                    </div>
-                </div>
-                 <div class="card">
-                    <img src="Day3/Στιγμιότυπο οθόνης 2025-07-27 222830.png" alt="Logistics Center Website" class="card-img" >
-                    <div class="card-content">
-                        <h3>Log in Website Logistics Center</h3>
-                        <p>Σχεδιασμός UI/UX για μια mobile εφαρμογή διαχείρισης εργασιών, με έμφαση στην απλότητα και την χρηστικότητα.</p>
-                        <a href="Day3/index.html" class="card-btn">Δοκίμασέ το</a>
+                <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col">
+                    <img src="application/img/screenshot.png" alt="Website JavaScript" class="h-48 w-full object-cover">
+                    <div class="p-4 flex flex-col flex-grow">
+                        <h3 class="text-lg font-semibold text-blue-700 mb-2">Ιστότοπος JavaScript </h3>
+                        <p class="text-gray-600 mb-4 flex-grow">Σελίδα που αφορά την φλωσα Προγραμματισμού <span class="text-yellow-400 text-2xl font-bold animate-pulse">JavaScript</span></p>
+                        <div class="flex gap-4 m-2 p-3">
+                          <span class="bg-gray-100 p-3 text-red-500 font-bold rounded-md shadow-lg cursor-pointer">HTML</span>
+                          <span class="bg-gray-100 p-3 text-blue-400 font-bold rounded-md shadow-lg cursor-pointer">tailwindcss</span>
+                          <span class="bg-gray-100 p-3 text-yellow-500 font-bold rounded-md shadow-lg cursor-pointer">JavaScript</span>
+                        </div>
+                        <a href="application_1/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-       <footer>
-  <p class="text-gray-400">© 2025 FrontDev. Όλα τα δικαιώματα διατηρούνται</p>
-</footer>
+    <footer class="bg-gray-100 py-6 mt-12">
+        <p class="text-center text-gray-500">© 2025 FrontDev. Όλα τα δικαιώματα διατηρούνται</p>
+        <div class="text-center gap-2 m-2 ">
+   <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300"><i class="ri-youtube-line"></i></a>
+   <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300"><i class="ri-github-fill"></i></a>
+   </div>
+    </footer>
 </body>
-<script src="index.js"></script>
-
+<script src="index.js" defer></script>
 </html>
+
 
 
 
