--- a/my_history.html
+++ b/my_history.html
@@ -1,70 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/
-7.0.0/css/brands.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-    <link rel="stylesheet" href="index.css">
-     <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
+     <link rel="icon" href="img/MyLogo.jpg" type="image/x-icon">
+     <script src="https://cdn.tailwindcss.com"></script>
     <title>Βήμα βήμα το πώς ξεκίνησα</title>
 </head>
-<body>
-    <header>
-     <div class="logo">
-         <img src="MyLogo.jpg" alt="logo-web" height="50">
-         <h1>FrontDev</h1>
-     </div>
-  <div class="menu-toggle" id="menu-toggle">
-    <span></span><span></span><span></span>
-  </div>
-  <nav id="nav-menu">
-    <a href="index.html">Αρχική</a>
-    <a href="Games.html">Παιχνίδια</a>
-    <a href="#pricing">Τιμοκατάλογος</a>
-    <a href="#contact">Επικοινωνία</a>
-    <a href="https://www.youtube.com/@WebDeveloper-op1fb"><i class="ri-youtube-line"></i></a>
-     <a href="https://github.com/Panagiwthsbarruku"><i class="ri-github-fill"></i></a>
-  </nav>
+<body class="bg-gray-800 text-white font-bold animate-scroll ">
+  <header class="bg-gray-900 text-white p-4 flex justify-between items-center shadow-md">
+    <div class="flex items-center ">
+        <img src="img/MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
+        <h1 class="text-2xl font-bold">FrontDev</h1>
+    </div>
+    
+    <nav id="desktop-nav" class="hidden md:flex items-center space-x-6 font-bold">
+        <a href="index.html" class="hover:text-blue-400 transition duration-300">Αρχική</a>
+        <a href="index.html" class="hover:text-blue-400 transition duration-300">Τιμοκατάλογος</a>
+        <a href="index.html" class="hover:text-blue-400 transition duration-300">Επικοινωνία</a>
+         <a href="Games.html" class="hover:text-blue-400 transition duration-300">Έργα-παιχνιδια</a>
+        <a href="my_history.html" class="hover:text-blue-400 transition duration-300">Το πώς ξεκίνησα</a>
+        <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300"><i class="ri-youtube-line"></i></a>
+        <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300"><i class="ri-github-fill"></i></a>
+    </nav>
+
+    <div class="md:hidden" id="menu-toggle">
+        <button class="text-white focus:outline-none">
+            <svg id="menu-icon" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+            <svg id="close-icon" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+        </button>
+    </div>
 </header>
-<main class="history-container">
-    <section class="history">
-        <h2>Βήμα βήμα το πώς ξεκίνησα</h2>
-        <p style="text-align: center; margin: 0%; padding: 0%;">Ίσως και να σου αρέσει που ξερεις.....</p>
-        <div class="timeline">
+<nav id="nav-menu" class="hidden md:hidden flex-col items-center bg-gray-900 text-white w-full flex flex-col">
+    <a href="index.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Αρχική</a>
+    <a href="index.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Τιμοκατάλογος</a>
+    <a href="index.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Επικοινωνία</a>
+      <a href="Games.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Έργα-παιχνιδια</a>
+    <a href="my_history.html" class="hover:text-blue-400 transition duration-300 w-full text-center py-2">Το πώς ξεκίνησα</a>
+    <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300 w-full text-center py-2"><i class="ri-youtube-line"></i></a>
+    <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300 w-full text-center py-2"><i class="ri-github-fill"></i></a>
+</nav>
+ <div class="items-center  h-12 mr-3 rounded-full relative flex justify-center my-8">
+     <img src="img/MyLogo.jpg" alt="my-logo" class="w-20 items-center display block m-12 ">
+ </div>
+<main class="text-center items-center gap-3">
+    <section class="text-center gap-3 -p-5 m-10 ">
+        <h2 class="text-3xl m-12 font-bold ">Βήμα βήμα το πώς ξεκίνησα</h2>
+        <p  class="m-12 text-2xl ">Ίσως και να σου αρέσει που ξερεις.....</p>
+        <div class="gap-4 m-10 p-8">
             <div class="timeline-item">
-                <h3>January 2021</h3>
-                <p>Started learning HTML and CSS basics.</p>
+                <h3 class="text-red-600 text-2xl m-2">January 2021</h3>
+                <p class="text-xl animate-pulse">Started learning HTML and CSS basics.</p>
             </div>
             <div class="timeline-item">
-                <h3>March 2023</h3>
-                <p>Completed first project: Personal Portfolio Website.</p>
+                <h3 class="text-red-600 text-2xl m-2">March 2023</h3>
+                <p class="text-xl animate-pulse" >Completed first project: Personal Portfolio Website.</p>
             </div>
             <div class="timeline-item">
-                <h3>June 2023</h3>
-                <p>Learned JavaScript fundamentals and DOM manipulation.</p>
+                <h3 class="text-red-600 text-2xl m-2">June 2023</h3>
+                <p class="text-xl animate-pulse">Learned JavaScript fundamentals and DOM manipulation.</p>
             </div>
             <div class="timeline-item">
-                <h3>September 2023</h3>
-                <p>Built interactive web applications using JavaScript.</p>
+                <h3 class="text-red-600 text-2xl m-2" >September 2023</h3>
+                <p class="text-xl animate-pulse">Built interactive web applications using JavaScript.</p>
             </div>
             <div class="timeline-item">
-                <h3>December 2023</h3>
-                <p>Explored UI/UX design principles and tools.</p>
+                <h3 class="text-red-600 text-2xl m-2">December 2023</h3>
+                <p class="text-xl animate-pulse">Explored UI/UX design principles and tools.</p>
             </div>
             <div class="timeline-item">
-                <h3>March 2024</h3>
-                <p>Started learning React.js for building dynamic user interfaces.</p>
+                <h3 class="text-red-600 text-2xl m-2">March 2024</h3>
+                <p class="text-xl animate-pulse">Started learning React.js for building dynamic user interfaces.</p>
             </div>
         </div>
     </section>
 </main>
 <footer>
-  <p class="text-gray-400">© 2025 FrontDev. Όλα τα δικαιώματα διατηρούνται</p>
-  <p>Creator by FrontDev</p>
+  <p class="text-gray-400 text-center font-bold">© 2025 FrontDev. Όλα τα δικαιώματα διατηρούνται</p>
+  <p class="text-center m-2 font-bold">Creator by FrontDev</p>
+  <div class="text-center gap-2 m-2 ">
+   <a href="https://www.youtube.com/@WebDeveloper-op1fb" class="text-2xl hover:text-red-600 transition duration-300"><i class="ri-youtube-line"></i></a>
+   <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300"><i class="ri-github-fill"></i></a>
+   </div>
 </footer>
 </body>
 <script src="index.js"></script>
