--- a/Games.html
+++ b/Games.html
@@ -52,7 +52,7 @@
             <h2 class="text-3xl font-bold text-center mb-10 animate-pulse">Τα έργα μου</h2>
             <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
                 <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col ">
-                    <img src="WebGener/img/Sreenshot.png" alt="WebSIte React" class="h-48 w-full object-cover">
+                    <img src="portofolio/img/sreen.jpg.png" alt="WebSIte React" class="h-48 w-full object-cover">
                     <div class="p-4 flex flex-col flex-grow">
                         <h3 class="text-lg font-semibold text-blue-700 mb-2">Προσωπική σελίδα Προγραμματισμού</h3>
                         <p class="text-gray-600 mb-4 flex-grow">Μια σελίδα που αφορά κυριώς προγραμματιστές γλώσσας React</p>
@@ -61,11 +61,11 @@
                           <span class="bg-gray-100 p-3 text-blue-400 font-bold rounded-md shadow-lg cursor-pointer">tailwindcss</span>
                           <span class="bg-gray-100 p-3 text-yellow-500 font-bold rounded-md shadow-lg cursor-pointer">JavaScript</span>
                         </div>
-                        <a href="application/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
+                        <a href="portofolio/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
                     </div>
                 </div>
                 <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col">
-                    <img src="application/img/screenshot.png" alt="Website JavaScript" class="h-48 w-full object-cover">
+                    <img src="Portofolio-js/img/image.png" alt="Website JavaScript" class="h-48 w-full object-cover">
                     <div class="p-4 flex flex-col flex-grow">
                         <h3 class="text-lg font-semibold text-blue-700 mb-2">Ιστότοπος JavaScript </h3>
                         <p class="text-gray-600 mb-4 flex-grow">Σελίδα που αφορά την φλωσα Προγραμματισμού <span class="text-yellow-400 text-2xl font-bold animate-pulse">JavaScript</span></p>
@@ -74,7 +74,7 @@
                           <span class="bg-gray-100 p-3 text-blue-400 font-bold rounded-md shadow-lg cursor-pointer">tailwindcss</span>
                           <span class="bg-gray-100 p-3 text-yellow-500 font-bold rounded-md shadow-lg cursor-pointer">JavaScript</span>
                         </div>
-                        <a href="application_1/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
+                        <a href="Portofolio-js/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
                     </div>
                 </div>
             </div>
@@ -90,6 +90,7 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
 
 
