--- a/Games.html
+++ b/Games.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-    <link rel="icon" href="img/MyLogo.jpg" type="image/x-icon">
+    <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
     <title>Έργα-παιχνιδια|FD</title>
 </head>
 <body class="bg-gray-900">
    <header class="bg-gray-900 text-white p-4 flex justify-between items-center shadow-md">
     <div class="flex items-center">
-        <img src="img/MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
+        <img src="MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
         <h1 class="text-2xl font-bold">FrontDev</h1>
     </div>
     <nav id="desktop-nav" class="hidden md:flex items-center space-x-6 font-bold">
@@ -45,7 +45,7 @@
     <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300 w-full text-center py-2"><i class="ri-github-fill"></i></a>
 </nav>
     <div class="relative flex justify-center my-8">
-        <img src="img/MyLogo.jpg" alt="logo" class="w-48 rounded-full shadow-lg">
+        <img src="MyLogo.jpg" alt="logo" class="w-48 rounded-full shadow-lg">
     </div>
     <main class="projects-container px-4 py-12 bg-gray-50">
         <section class="projects max-w-6xl mx-auto">
@@ -90,6 +90,7 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
 
 
