--- a/Games.html
+++ b/Games.html
@@ -52,7 +52,7 @@
             <h2 class="text-3xl font-bold text-center mb-10 animate-pulse">Τα έργα μου</h2>
             <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
                 <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col ">
-                    <img src="portofolio/img/sreen.jpg.png" alt="WebSIte React" class="h-48 w-full object-cover">
+                    <img src="portofolio/img/screen.jpg.png" alt="WebSIte React" class="h-48 w-full object-cover">
                     <div class="p-4 flex flex-col flex-grow">
                         <h3 class="text-lg font-semibold text-blue-700 mb-2">Προσωπική σελίδα Προγραμματισμού</h3>
                         <p class="text-gray-600 mb-4 flex-grow">Μια σελίδα που αφορά κυριώς προγραμματιστές γλώσσας React</p>
@@ -90,6 +90,7 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
 
 
