--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="description" content="Frontend Developer Portfolio showcasing skills in HTML, CSS, JavaScript, and UI/UX design. Explore projects and contact for collaboration.">
     <meta name="keywords" content="Frontend Developer, Web Development, HTML, CSS,JavaScript, UI/UX Design, Portfolio, Projects, Contact">
     <meta name="author" content="Frontend Developer">
-  <link rel="icon" href="img/MyLogo.jpg" type="image/x-icon">
+  <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Καλώς ήλθατε στον ιστότοπο μου</title>
 </head>
@@ -202,3 +202,4 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
