--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="bg-gray-900">
 <header class="bg-gray-900 text-white p-4 flex justify-between items-center shadow-md">
     <div class="flex items-center">
-        <img src="img/MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
+        <img src="MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
         <h1 class="text-2xl font-bold">FrontDev</h1>
     </div>
     <nav id="desktop-nav" class="hidden md:flex items-center space-x-6 font-bold">
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="hero-img md:w-1/2 mt-10 md:mt-0 flex justify-center">
-        <img src="img/MyLogo.jpg" class="w-64 h-64 rounded-full shadow-2xl"/>
+        <img src="MyLogo.jpg" class="w-64 h-64 rounded-full shadow-2xl"/>
       </div>
     </div>
   </section>
@@ -202,4 +202,5 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
