--- a/my_history.html
+++ b/my_history.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-     <link rel="icon" href="img/MyLogo.jpg" type="image/x-icon">
+     <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
      <script src="https://cdn.tailwindcss.com"></script>
     <title>Βήμα βήμα το πώς ξεκίνησα</title>
 </head>
 <body class="bg-gray-800 text-white font-bold animate-scroll ">
   <header class="bg-gray-900 text-white p-4 flex justify-between items-center shadow-md">
     <div class="flex items-center ">
-        <img src="img/MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
+        <img src="MyLogo.jpg" alt="logo-web" class="h-12 mr-3 rounded-full">
         <h1 class="text-2xl font-bold">FrontDev</h1>
     </div>
     
@@ -49,7 +49,7 @@
     <a href="https://github.com/Panagiwthsbarruku" class="text-2xl hover:text-gray-400 transition duration-300 w-full text-center py-2"><i class="ri-github-fill"></i></a>
 </nav>
  <div class="items-center  h-12 mr-3 rounded-full relative flex justify-center my-8">
-     <img src="img/MyLogo.jpg" alt="my-logo" class="w-20 items-center display block m-12 ">
+     <img src="MyLogo.jpg" alt="my-logo" class="w-20 items-center display block m-12 ">
  </div>
 <main class="text-center items-center gap-3">
     <section class="text-center gap-3 -p-5 m-10 ">
@@ -94,3 +94,4 @@
 </body>
 <script src="index.js"></script>
 </html>
+
