--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
   </footer>
 </body>
 <script src="index.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </html>
+
 
 
 
