--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
     </div>
   </section>
-  <section id="contact" class="py-20">
+  <section id="contact-form" class="py-20">
     <div class="container mx-auto px-6">
       <h2 class="text-3xl font-bold text-center text-gray-400 mb-8">Επικοινώνησε Μαζί μου</h2>
       <form action="https://formspree.io/f/mpwjnrvy" method="POST" id="Form" class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
