--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
       </div>
     </div>
   </section>
-  <section id="contact-form" class="py-20">
+  <section id="contact" class="py-20">
     <div class="container mx-auto px-6">
       <h2 class="text-3xl font-bold text-center text-gray-400 mb-8">Επικοινώνησε Μαζί μου</h2>
-      <form action="https://formspree.io/f/mpwjnrvy" method="POST" id="Form" class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
+      <form action="" method="POST" id="contact-form" class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
         <div class="mb-4">
           <label for="name" class="block text-gray-700 font-bold mb-2">Όνομα</label>
           <input type="text" id="name" required class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
