--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-      <meta name="description" content="Frontend Developer Portfolio showcasing skills in HTML, CSS, JavaScript, and UI/UX design. Explore projects and contact for collaboration.">
-    <meta name="keywords" content="Frontend Developer, Web Development, HTML, CSS,JavaScript, UI/UX Design, Portfolio, Projects, Contact">
-    <meta name="author" content="Frontend Developer">
+    <!-- Social / Open Graph -->
+  <meta property="og:title" content="FrontDev — Προγραμματιστής Ιστών & Web Developer Portfolio">
+  <meta property="og:description" content="Δες τα έργα μου: websites, εφαρμογές, e-commerce. Επαγγελματικές λύσεις web development.">
+  <meta property="og:image" content="https://portodolio.netlify.app/path-to/preview-image.jpg">
+  <meta property="og:url" content="https://portodolio.netlify.app/">
+  <meta property="og:type" content="website">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FrontDev — Προγραμματιστής Ιστών & Web Developer Portfolio">
+  <meta name="twitter:description" content="Δες τα έργα μου: websites, εφαρμογές, e-commerce. Επαγγελματικές λύσεις web development.">
+  <meta name="twitter:image" content="https://portodolio.netlify.app/path-to/preview-image.jpg">
+  <!-- (Προαιρετικά) meta keywords -->
+  <meta name="keywords" content="web developer, προγραμματιστής ιστών, portfolio, e-commerce, responsive σχεδιασμός, εφαρμογές web, FrontDev">
   <link rel="icon" href="MyLogo.jpg" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Καλώς ήλθατε στον ιστότοπο μου</title>
