--- a/index.html
+++ b/index.html
@@ -95,35 +95,14 @@
           <h3 class="text-xl font-bold mb-2">Εργαλεία Ενσωμάτωσης Δεδομένων</h3>
           <p class="text-gray-600">Εξατομικευμένα ταμπλό και λύσεις ενσωμάτωσης για επιχειρήσεις.</p>
         </div>
+            <div class="bg-white rounded-lg shadow-lg p-6 text-center transform hover:scale-105 transition duration-300">
+          <h3 class="text-xl font-bold mb-2">Εγγυούμαστε <span class="text-green-600 text-2xl focus">100%</span> επιτυχία</h3>
+          <p class="text-gray-600">Χρησιμοποιούμε SEO που κάνουν το site σας να παραμένει για αρκετό καιρό στην κορυφή <span class="text-2xl text-red-600 font-bold">της Google</span></p>
+        </div>
       </div>
     </div>
   </section>
-
   <div class="bg-gray-900 py-4 overflow-hidden relative">
-    <div class="flex whitespace-nowrap animate-scroll">
-      <div class="flex space-x-4 px-4">
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">HTML5</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">CSS</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JS SCRIPT</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JAVA</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">PHP</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Python</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Node JS</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">My SQL</span>
-      </div>
-      <div class="flex space-x-4 px-4" aria-hidden="true">
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">HTML5</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">CSS</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JS SCRIPT</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">JAVA</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">PHP</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Python</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">Node JS</span>
-        <span class="bg-gray-700 text-white font-semibold py-1 px-4 rounded-full">My SQL</span>
-      </div>
-    </div>
-  </div>
-
   <section id="tech" class="py-20">
     <div class="container mx-auto px-6">
       <h2 class="text-3xl font-bold text-center text-gray-400 mb-12">Γλώσσες Προγραμματισμού & Τεχνολογίες</h2>
@@ -138,7 +117,6 @@
       </div>
     </div>
   </section>
-
   <section id="pricing" class="pricing py-20 bg-gray-100">
     <div class="container mx-auto px-6">
       <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Πακέτα τιμών</h2>
@@ -213,6 +191,7 @@
 <script src="index.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </html>
+
 
 
 
