--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
     <!-- Social / Open Graph -->
   <meta property="og:title" content="FrontDev — Προγραμματιστής Ιστών & Web Developer Portfolio">
-  <meta property="og:description" content="Δες τα έργα μου: websites, εφαρμογές, e-commerce. Επαγγελματικές λύσεις web development.">
+  <meta property="og:description" content="Δες τα έργα μου: websites, εφαρμογές, e-commerce. Επαγγελματικές λύσεις web development. FrontDev">
   <meta property="og:image" content="https://portodolio.netlify.app/path-to/preview-image.jpg">
   <meta property="og:url" content="https://portodolio.netlify.app/">
   <meta property="og:type" content="website">
@@ -105,7 +105,7 @@
   <div class="bg-gray-900 py-4 overflow-hidden relative">
   <section id="tech" class="py-20">
     <div class="container mx-auto px-6">
-      <h2 class="text-3xl font-bold text-center text-gray-400 mb-12">Γλώσσες Προγραμματισμού & Τεχνολογίες</h2>
+      <h2 class="text-3xl font-bold text-center text-gray-400 mb-12">Χρησιμοποιούμε σύγχρoνες Γλώσσες Προγραμματισμού & Τεχνολογίες</h2>
       <div class="flex flex-wrap justify-center gap-4 text-center">
         <div class="bg-red-500 text-white font-bold py-2 px-5 rounded-lg shadow-md">HTML5</div>
         <div class="bg-blue-500 text-white font-bold py-2 px-5 rounded-lg shadow-md">CSS3</div>
@@ -206,6 +206,7 @@
     });
   </script>
 </html>
+
 
 
 
