--- a/Games.html
+++ b/Games.html
@@ -77,6 +77,19 @@
                         <a href="Portofolio-js/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
                     </div>
                 </div>
+                <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col">
+                    <img src="Nicee-web/assets/screen.png" alt="Nicee img" class="h-48 w-full object-cover">
+                    <div class="p-4 flex flex-col flex-grow">
+                        <h3 class="text-lg font-semibold text-blue-700 mb-2">Nicee radio website</h3>
+                        <p class="text-gray-600 mb-4 flex-grow">Σελίδα ραδιοφωνικού περιεχομένου με live μουσική και περιεχόμενο youtube <span class="text-yellow-400 text-2xl font-bold animate-pulse">JavaScript</span></p>
+                        <div class="flex gap-4 m-2 p-3">
+                          <span class="bg-gray-100 p-3 text-red-500 font-bold rounded-md shadow-lg cursor-pointer">HTML</span>
+                          <span class="bg-gray-100 p-3 text-blue-400 font-bold rounded-md shadow-lg cursor-pointer">tailwindcss</span>
+                          <span class="bg-gray-100 p-3 text-yellow-500 font-bold rounded-md shadow-lg cursor-pointer">JavaScript</span>
+                        </div>
+                        <a href="Nicee-web/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -90,6 +103,7 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
 
 
