--- a/Games.html
+++ b/Games.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
                 <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col">
-                    <img src="portofolio-iqos/assets/screen.png" alt="Iqos img" class="h-48 w-full object-cover">
+                    <img src="portofolio-iqos/assets/screen.png.png" alt="Iqos img" class="h-48 w-full object-cover">
                     <div class="p-4 flex flex-col flex-grow">
                         <h3 class="text-lg font-semibold text-blue-700 mb-2">Iqos smoking website</h3>
                         <p class="text-gray-600 mb-4 flex-grow">Σελίδα iqos για αγορές και πληροφορίες σχετικά με το IQOS</p>
@@ -117,6 +117,7 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
 
 
