--- a/Games.html
+++ b/Games.html
@@ -101,7 +101,7 @@
                           <span class="bg-gray-100 p-3 text-blue-400 font-bold rounded-md shadow-lg cursor-pointer">tailwindcss</span>
                           <span class="bg-gray-100 p-3 text-yellow-500 font-bold rounded-md shadow-lg cursor-pointer">JavaScript</span>
                         </div>
-                        <a href="portofolio/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
+                        <a href="portofolio-iqos/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
                     </div>
                 </div>
             </div>
@@ -117,6 +117,7 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
 
 
